--- a/server/frontend/base.html
+++ b/server/frontend/base.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="/css/themes/{{active_theme}}.css" />
     <link rel="stylesheet" type="text/css" href="/css/w3.css" />
+    <link rel="stylesheet" href="/css/introjs.min.css">
 
     <style>
         * {
@@ -16,6 +17,7 @@
         }
     </style>
 
+    <script src="js/intro.min.js"></script>
     <script src="js/general.js"></script>
     <script src="js/overlay.js"></script>
     {% block head %}{% endblock %}
