--- a/server/frontend/shop.html
+++ b/server/frontend/shop.html
@@ -14,7 +14,7 @@
     </div>
     <div style="position: fixed; top: 95vh; right: 24px; z-index: 10;">
         <button class="w3-button" id="sum">0€</button>
-        <button class="w3-button" onclick="ITEMBAG.render_pay()">
+        <button id="pay" class="w3-button" onclick="ITEMBAG.render_pay()">
             {{ lang.pay }}
         </button>
     </div>
