--- a/server/frontend/storage.html
+++ b/server/frontend/storage.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block body %}
     <div class="w3-border-0 w3-cell-row">
-        <div class="w3-cell w3-border w3-theme-d4 w3-hover-theme w3-center"  onclick='create()'>
+        <div id="create" class="w3-cell w3-border w3-theme-d4 w3-hover-theme w3-center"  onclick='create()'>
             <h1><b>{{ lang.new_product }}</b></h1>
         </div>
     </div>
